Replace 5 backslashes with 2

--- a/src/content/lessen/fysica/grootheden_eenheden/machten_van_10/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/machten_van_10/index.mdx
@@ -38,11 +38,11 @@ Hoe komen we aan die $\orange{10^{-9}}$ bij het voorbeeld van $0{,}00000000334
 we eerst hoe we een macht van 10 ook al weer uitrekenen. Enkele voorbeelden:
 
 \begin{split}
-2{,}6211\cdot \orange{10^2} = 2{,}6211 \cdot \orange{100} = 262{,}11\\\\\
- -0{,}0075\cdot \orange{10^3} = -0{,}0075\cdot \orange{1000} = -7{,}5\\\\\
- 6{,}3\cdot \orange{10^{-3}} = 6{,}3 \cdot \orange{0{,}001} = 0{,}0063\\\\\
- 405{,}9\cdot \orange{10^{-2}} = 405{,}9 \cdot \orange{0{,}01} = 4{,}059\\\\\
- 51\cdot \orange{10^{3}} = 51 \cdot \orange{1000} = 51\ 000\\\\\
+2{,}6211\cdot \orange{10^2} = 2{,}6211 \cdot \orange{100} = 262{,}11\\
+ -0{,}0075\cdot \orange{10^3} = -0{,}0075\cdot \orange{1000} = -7{,}5\\
+ 6{,}3\cdot \orange{10^{-3}} = 6{,}3 \cdot \orange{0{,}001} = 0{,}0063\\
+ 405{,}9\cdot \orange{10^{-2}} = 405{,}9 \cdot \orange{0{,}01} = 4{,}059\\
+ 51\cdot \orange{10^{3}} = 51 \cdot \orange{1000} = 51\ 000\\
 \end{split}
 
 Je ziet dat vermenigvuldigen met een macht van 10
@@ -67,9 +67,9 @@ We willen de komma van $0{,}00000000334$ met
    **<span class="orange">delen door $10^9$</span>**.
 
 \begin{split}
-0{,}00000000334 &= 0{,}00000000334 \cdot \frac{\blue{10^9}}{\orange{10^9}} \\\\\
- &= 0{,}00000000334 \cdot \blue{10^9} \cdot \frac{1}{\orange{10^9}} \\\\\
- &= \udotblue{0{,}00000000334 \cdot \blue{10^{9}}} \cdot \orange{10^{-9}} \\\\\
+0{,}00000000334 &= 0{,}00000000334 \cdot \frac{\blue{10^9}}{\orange{10^9}} \\
+ &= 0{,}00000000334 \cdot \blue{10^9} \cdot \frac{1}{\orange{10^9}} \\
+ &= \udotblue{0{,}00000000334 \cdot \blue{10^{9}}} \cdot \orange{10^{-9}} \\
  &= \udotblue{3{,}34} \cdot \orange{10^{-9}}
 \end{split}
 
@@ -93,8 +93,8 @@ Daarom moeten we ook terug delen door $10^{-11}$. Dat is echter hetzelfde als
 **<span class="orange">vermenigvuldigen met $10^{11}$</span>**.
 
 \begin{split}
-149\ 600\ 000\ 000 &= \udotblue{149\ 600\ 000\ 000 \cdot \blue{10^{-11}}} \cdot \orange{10^{11}} \\\\\
- &= \udotblue{1{,}496} \cdot \orange{10^{11}} \\\\\
+149\ 600\ 000\ 000 &= \udotblue{149\ 600\ 000\ 000 \cdot \blue{10^{-11}}} \cdot \orange{10^{11}} \\
+ &= \udotblue{1{,}496} \cdot \orange{10^{11}} \\
 \end{split}
 
 Merk wel op dat nu het aantal [beduidende cijfers](beduidende_cijfers) is
@@ -112,10 +112,10 @@ en vervolgens
 **<span class="orange">vermenigvuldigen met $10^{11}$ om het getal gelijk te houden</span>**.
 
 \begin{split}
-3{,}34 \cdot 10^{-9} &= 3{,}34 \cdot \udotorange{10^{-9} \cdot \orange{10^{11}}} \cdot \blue{10^{-11}} \\\\\
- &= 3{,}34 \cdot \udotorange{10^{2}} \cdot \blue{10^{-11}} \\\\\
- &= \udoubleorange{3{,}34 \cdot 10^{2}} \cdot \blue{10^{-11}} \\\\\
- &= \udoubleorange{334} \cdot \blue{10^{-11}} \\\\\
+3{,}34 \cdot 10^{-9} &= 3{,}34 \cdot \udotorange{10^{-9} \cdot \orange{10^{11}}} \cdot \blue{10^{-11}} \\
+ &= 3{,}34 \cdot \udotorange{10^{2}} \cdot \blue{10^{-11}} \\
+ &= \udoubleorange{3{,}34 \cdot 10^{2}} \cdot \blue{10^{-11}} \\
+ &= \udoubleorange{334} \cdot \blue{10^{-11}} \\
 \end{split}
 
 ## Samengevat
