--- a/src/content/lessen/fysica/grootheden_eenheden/prefixen/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/prefixen/index.mdx
@@ -68,9 +68,9 @@ Bijvoorbeeld: voor een bepaald recept heb je $250 \si{ g}$ bloem nodig. Zet dit 
 
 \begin{split}
 250\si{ g}
-&= 250 \cdot \orange{10^{-3}} \cdot \blue{10^3} \si{ g}\\\\\
-&= 250 \cdot \orange{10^{-3}} \blue{\si{ k}} \si{g}\\\\\
-&= \orange{0{,}250} \blue{\si{ k}} \si{g}\\\\\
+&= 250 \cdot \orange{10^{-3}} \cdot \blue{10^3} \si{ g}\\
+&= 250 \cdot \orange{10^{-3}} \blue{\si{ k}} \si{g}\\
+&= \orange{0{,}250} \blue{\si{ k}} \si{g}\\
 \end{split}
 
 ## Prefixen omzetten
@@ -85,8 +85,8 @@ Stel dat we $5{,}2 \green{\si{ k}}\si{m}$ willen omzetten naar $\blue{\si{d}}\si
 2. Los op volgens de methode van het [omzetten van machten van 10](machten_van_10#machten-van-10-omzetten)
    \begin{split}
    5{,}2 \cdot \green{10^{3}} \si{ m}
-   &= 5{,}2 \cdot \green{10^{3}} \cdot \orange{10^1} \cdot \blue{10^{-1}}\si{ m}\\\\\
-   &= 5{,}2\cdot 10^{\green{3} + \orange{1}} \cdot \blue{10^{-1}} \si{ m}\\\\\
+   &= 5{,}2 \cdot \green{10^{3}} \cdot \orange{10^1} \cdot \blue{10^{-1}}\si{ m}\\
+   &= 5{,}2\cdot 10^{\green{3} + \orange{1}} \cdot \blue{10^{-1}} \si{ m}\\
    &= 5{,}2\cdot 10^4 \cdot \blue{10^{-1}}\si{ m}
    \end{split}
 3. Vervang de bijhorende macht van 10 terug door de prefix:
@@ -100,9 +100,9 @@ wordt die prefix ook tot de derde macht verheven. Er staat dus eigenlijk
 
 \begin{split}
 \orange{\si{c}}\si{m}^3
-&= \orange{\si{c}}^3\si{m}^3\\\\\
-&= (\orange{10^{-2}})^3\si{m}^3\\\\\
-&= 10^{\orange{-2}\cdot 3}\si{m}^3\\\\\
+&= \orange{\si{c}}^3\si{m}^3\\
+&= (\orange{10^{-2}})^3\si{m}^3\\
+&= 10^{\orange{-2}\cdot 3}\si{m}^3\\
 &= 10^{-6}\si{m}^3
 \end{split}
 
@@ -110,8 +110,8 @@ Voor prefixen van een oppervlakte (eenheid $\si{m}^2$) doen we net hetzelfde, ma
 
 \begin{split}
 \orange{\si{c}}\si{m}^2
-&= \orange{\si{c}}^2\si{m}^2\\\\\
-&= (\orange{10^{-2}})^2\si{m}^2\\\\\
-&= 10^{\orange{-2}\cdot 2} \si{m}^2\\\\\
+&= \orange{\si{c}}^2\si{m}^2\\
+&= (\orange{10^{-2}})^2\si{m}^2\\
+&= 10^{\orange{-2}\cdot 2} \si{m}^2\\
 &= 10^{-4}\si{m}^2
 \end{split}
