--- a/src/content/lessen/wiskunde/1g_vgl/functies/index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/functies/index.mdx
@@ -33,7 +33,7 @@ In deze les bespreken we deze toepassingen in het geval van
 Stel dat we twee functies $\green{f}$ en $\blue{g}$ hebben waarbij
 
 \begin{split}
-\green{f(x)} &= -x + 4\\\\\
+\green{f(x)} &= -x + 4\\
  \blue{g(x)} &= 2x - 3
 \end{split}
 
@@ -50,7 +50,7 @@ Een snijpunt is een punt dat zowel op de grafiek van $\green{f}$ als op de grafi
 Als $\orange{x}$ de $x-$coördinaat van een snijpunt is, dan is dus $\green{f(\orange{x})} = \blue{g(\orange{x})}$, of wanneer we $\orange{x}$ invullen in het voorschrift van $\green{f}$ en $\blue{g}$:
 
 \begin{split}
-\green{f(\orange{x})} &= \blue{g(\orange{x})}\\\\\
+\green{f(\orange{x})} &= \blue{g(\orange{x})}\\
 \Leftrightarrow \green{-\orange{x} + 4} &= \blue{2\orange{x} - 3}
 \end{split}
 
@@ -59,25 +59,25 @@ oplossen](eerste_graad), vinden we de $x-$coördinaat van het snijpunt van
 $\green{f}$ en $\blue{g}$:
 
 \begin{split}
--\orange{x} + 4 &= 2\orange{x} - 3\\\\\
- \Leftrightarrow -3\orange{x} + 4 &= - 3\\\\\
- \Leftrightarrow -3\orange{x} &= - 7\\\\\
- \Leftrightarrow \orange{x} &= \frac{7}{3}\\\\\
+-\orange{x} + 4 &= 2\orange{x} - 3\\
+ \Leftrightarrow -3\orange{x} + 4 &= - 3\\
+ \Leftrightarrow -3\orange{x} &= - 7\\
+ \Leftrightarrow \orange{x} &= \frac{7}{3}\\
 \end{split}
 
 <Expand title="Toon met meer tussenstappen">
 
 \begin{split}
--x + 4 &= 2x - 3\\\\\
- \Leftrightarrow -x + 4 \pink{- 2x} &= 2x - 3 \pink{- 2x}\\\\\
- \Leftrightarrow \udot{-x} + 4 \udot{\pink{- 2x}} &= \cancelto{0}{2x \pink{- 2x}} - 3\\\\\
- \Leftrightarrow \udot{-3x} + 4 &= - 3\\\\\
- \Leftrightarrow -3x + 4 \pink{-4} &= - 3 \pink{-4}\\\\\
- \Leftrightarrow -3x + \cancelto{0}{4 \pink{-4}} &= \udot{- 3 \pink{-4}}\\\\\
- \Leftrightarrow -3x &= \udot{- 7}\\\\\
- \Leftrightarrow \frac{-3x}{\pink{-3}} &= \frac{- 7}{\pink{-3}}\\\\\
- \Leftrightarrow \cancelto{1}{\frac{-3}{\pink{-3}}}\cdot x &= \frac{- 7}{\pink{-3}}\\\\\
- \Leftrightarrow x &= \frac{7}{3}\\\\\
+-x + 4 &= 2x - 3\\
+ \Leftrightarrow -x + 4 \pink{- 2x} &= 2x - 3 \pink{- 2x}\\
+ \Leftrightarrow \udot{-x} + 4 \udot{\pink{- 2x}} &= \cancelto{0}{2x \pink{- 2x}} - 3\\
+ \Leftrightarrow \udot{-3x} + 4 &= - 3\\
+ \Leftrightarrow -3x + 4 \pink{-4} &= - 3 \pink{-4}\\
+ \Leftrightarrow -3x + \cancelto{0}{4 \pink{-4}} &= \udot{- 3 \pink{-4}}\\
+ \Leftrightarrow -3x &= \udot{- 7}\\
+ \Leftrightarrow \frac{-3x}{\pink{-3}} &= \frac{- 7}{\pink{-3}}\\
+ \Leftrightarrow \cancelto{1}{\frac{-3}{\pink{-3}}}\cdot x &= \frac{- 7}{\pink{-3}}\\
+ \Leftrightarrow x &= \frac{7}{3}\\
 \end{split}
 
 </Expand>
@@ -86,15 +86,15 @@ De $x-$coördinaat van het snijpunt van $\green{f}$ en $\blue{g}$ is dus
 $\orange{\frac{7}{3}}$. We kunnen dit controleren door $\orange{\frac{7}{3}}$ in te vullen in $\green{f}$ en $\blue{g}$:
 
 \begin{split}
-\green{f(\orange{\frac{7}{3}})} &= -\orange{\frac{7}{3}} + 4\\\\\
- &= \frac{-7}{3} + \frac{12}{3}\\\\\
+\green{f(\orange{\frac{7}{3}})} &= -\orange{\frac{7}{3}} + 4\\
+ &= \frac{-7}{3} + \frac{12}{3}\\
  &= \bbox[1pt,border: 2px dotted #ff6300]{\frac{5}{3}}
 \end{split}
 
 \begin{split}
-\blue{g(\orange{\frac{7}{3}})} &= 2\cdot \orange{\frac{7}{3}} - 3\\\\\
- &= \frac{14}{3} - 3\\\\\
- &= \frac{14}{3} - \frac{9}{3}\\\\\
+\blue{g(\orange{\frac{7}{3}})} &= 2\cdot \orange{\frac{7}{3}} - 3\\
+ &= \frac{14}{3} - 3\\
+ &= \frac{14}{3} - \frac{9}{3}\\
  &= \bbox[1pt,border: 2px dotted #ff6300]{\frac{5}{3}}
 \end{split}
 
@@ -116,8 +116,8 @@ $$-\orange{x} + 4 = 0$$
 En we krijgen een vergelijking! Wanneer we deze oplossen, vinden we de <span class="orange">nulwaarde</span> van de functie.
 
 \begin{split}
--\orange{x} + 4 &= 0\\\\\
-\Leftrightarrow -\orange{x} &= - 4\\\\\
+-\orange{x} + 4 &= 0\\
+\Leftrightarrow -\orange{x} &= - 4\\
 \Leftrightarrow \orange{x} &= 4
 \end{split}
 
@@ -134,7 +134,7 @@ y-coördinaat)" />.  Dit kan je ook zien op onderstaande grafiek:
 De **snijpunten** van twee functies $f(x)$ en $g(x)$ vind je door eerst de twee **[functievoorschriften](../functies/voorschrift) aan elkaar gelijk te stellen**:
 
 \begin{split}
-f(x) &= g(x)\\\\\
+f(x) &= g(x)\\
 \Leftrightarrow \text{(...voorschrift van } f\text{...)} &= \text{(...voorschrift van } g\text{...)}
 \end{split}
 
@@ -146,7 +146,7 @@ De oplossing van deze vergelijking geeft de $x-$coördinaat van elk snijpunt. Al
 De **nulpunten** van een functie $f(x)$ vind je door het **[functievoorschrift](../functies/voorschrift) gelijk aan nul te stellen**:
 
 \begin{split}
-f(x) &= 0\\\\\
+f(x) &= 0\\
 \Leftrightarrow \text{(...voorschrift van } f\text{...)} &= 0
 \end{split}
 
