--- a/src/content/lessen/wiskunde/1g_vgl/omvormen/index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/omvormen/index.mdx
@@ -35,8 +35,8 @@ x \orange{- 4} = - 3x \orange{- 7}
 We zeggen dat we vergelijking \ref{eq:1} hebben _omgevormd_ naar vergelijking \ref{eq:2} door in het linker- en rechterlid _dezelfde bewerking_ te doen (namelijk links en rechts $\orange{6}$ aftrekken).
 Achter elkaar schrijven we de omvorming als volgt:
 \begin{split}
-&x + &2 &= \quad &-3x - &1\\\\\
-\Leftrightarrow\quad &x + &2 \orange{- 6} &= &-3x - &1 \orange{- 6}\\\\\
+&x + &2 &= \quad &-3x - &1\\
+\Leftrightarrow\quad &x + &2 \orange{- 6} &= &-3x - &1 \orange{- 6}\\
 \Leftrightarrow\quad &x - &4 &= &-3x - &7
 \end{split}
 
@@ -44,8 +44,8 @@ Achter elkaar schrijven we de omvorming als volgt:
 
 Er staat niet voor niets een _dubbele pijl_ ($\Leftrightarrow$) tussen de vergelijkingen in plaats van een enkele pijl ($\Rightarrow$ of $\Leftarrow$). Je kan namelijk van de laatste vergelijking ook terug naar de eerste vergelijking gaan. De omvorming is _omkeerbaar_:
 \begin{split}
-&x - &4 &= \quad &-3x - &7\\\\\
-\Leftrightarrow\quad &x + &1 \orange{+ 6} &= &-3x - &2 \orange{+ 6}\\\\\
+&x - &4 &= \quad &-3x - &7\\
+\Leftrightarrow\quad &x + &1 \orange{+ 6} &= &-3x - &2 \orange{+ 6}\\
 \Leftrightarrow\quad &x + &2 &= &-3x - &1
 \end{split}
 
@@ -66,29 +66,29 @@ $$2x - 6 = 8 - x$$
 Om die om te zetten naar de vorm die we willen <Mute text="(namelijk $x= \text{(een getal)}$)" />, mag er in het rechterlid geen $x$ staan. De eenvoudigste manier om die weg te krijgen is door een vergelijking te maken met $8 - x \orange{+ x}$ in het rechterlid:
 
 \begin{split}
-2x - 6 &= 8 - x\\\\\
- \Leftrightarrow 2x - 6 \orange{+ x} &= 8 - x \orange{+ x}\\\\\
- \Leftrightarrow \udot{2x} - 6 \udot{\orange{+ x}} &= 8 \cancelto{0}{- x \orange{+ x}}\\\\\
- \Leftrightarrow \udot{\orange{3}x} - 6 &= 8\\\\\
+2x - 6 &= 8 - x\\
+ \Leftrightarrow 2x - 6 \orange{+ x} &= 8 - x \orange{+ x}\\
+ \Leftrightarrow \udot{2x} - 6 \udot{\orange{+ x}} &= 8 \cancelto{0}{- x \orange{+ x}}\\
+ \Leftrightarrow \udot{\orange{3}x} - 6 &= 8\\
 \end{split}
 
 Door aan beide kanten van de vergelijking $\orange{x}$ op te tellen, valt de $-x$ uit het rechterlid weg en is er enkel in het linkerlid nog een $x$.
 
 In de vorm $x= \text{(een getal)}$ staan er in het linkerlid geen getallen meer. De $\orange{3}$ en de $-6$ moeten dus weg links. Je mag kiezen met welke je begint, maar eerst de $-6$ weg krijgen is het eenvoudigst:
 \begin{split}
-3x - 6 &= 8\\\\\
- \Leftrightarrow 3x - 6 \orange{+ 6} &= 8 \orange{+6}\\\\\
- \Leftrightarrow 3x \cancelto{0}{- 6 \orange{+ 6}} &= \udot{8 \orange{+6}}\\\\\
- \Leftrightarrow 3x &= \udot{14}\\\\\
+3x - 6 &= 8\\
+ \Leftrightarrow 3x - 6 \orange{+ 6} &= 8 \orange{+6}\\
+ \Leftrightarrow 3x \cancelto{0}{- 6 \orange{+ 6}} &= \udot{8 \orange{+6}}\\
+ \Leftrightarrow 3x &= \udot{14}\\
 \end{split}
 
 Vervolgens moeten we enkel nog de $3$ weg krijgen. Dat kan als volgt:
 
 \begin{split}
-3x &= 14\\\\\
- \Leftrightarrow \frac{3x}{\orange{3}} &= \frac{14}{\orange{3}}\\\\\
- \Leftrightarrow \cancelto{1}{\frac{3}{\orange{3}}}\cdot x &= \frac{14}{\orange{3}}\\\\\
- \Leftrightarrow x &= \frac{14}{3}\\\\\
+3x &= 14\\
+ \Leftrightarrow \frac{3x}{\orange{3}} &= \frac{14}{\orange{3}}\\
+ \Leftrightarrow \cancelto{1}{\frac{3}{\orange{3}}}\cdot x &= \frac{14}{\orange{3}}\\
+ \Leftrightarrow x &= \frac{14}{3}\\
 \end{split}
 **En we hebben $x$ gevonden!!!** 🎉💃💪
 
@@ -97,13 +97,13 @@ Vervolgens moeten we enkel nog de $3$ weg krijgen. Dat kan als volgt:
 Als we in de stap met de keuze tussen $\orange{3}$ en $-6$, kiezen om eerst de $\orange{3}$ weg te werken in plaats van de $6$, vinden we natuurlijk hetzelfde:
 
 \begin{split}
-3x - 6 &= 8\\\\\
- \Leftrightarrow\frac{3x - 6}{\orange{3}} &= \frac{8}{\orange{3}}\\\\\
- \Leftrightarrow x - 2 &= \frac{8}{3}\\\\\
- \Leftrightarrow x - 2 \orange{+2} &= \frac{8}{3} \orange{+2}\\\\\
- \Leftrightarrow x &= \frac{8}{3} +2\\\\\
- \Leftrightarrow x &= \frac{8}{3} +\frac{6}{3}\\\\\
- \Leftrightarrow x &= \frac{14}{3}\\\\\
+3x - 6 &= 8\\
+ \Leftrightarrow\frac{3x - 6}{\orange{3}} &= \frac{8}{\orange{3}}\\
+ \Leftrightarrow x - 2 &= \frac{8}{3}\\
+ \Leftrightarrow x - 2 \orange{+2} &= \frac{8}{3} \orange{+2}\\
+ \Leftrightarrow x &= \frac{8}{3} +2\\
+ \Leftrightarrow x &= \frac{8}{3} +\frac{6}{3}\\
+ \Leftrightarrow x &= \frac{14}{3}\\
 \end{split}
 
 Maar zoals je ziet, maken we het ons zo onnodig moeilijk.
