--- a/src/content/lessen/wiskunde/afgeleiden_1/afgeleide/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/afgeleide/index.mdx
@@ -78,16 +78,16 @@ Je ziet dat we eerst nog $\green{f(4{,}1)}$ en $\green{f(4)}$ moeten berekenen.
 Dat is snel gefikst:
 
 \begin{split}
-\green{f(4{,}1)} &= -3 \cdot \green{4{,}1}^2 + 5\\\\\
- &= -3 \cdot 16{,}81 + 5\\\\\
- &= -50{,}43 + 5\\\\\
+\green{f(4{,}1)} &= -3 \cdot \green{4{,}1}^2 + 5\\
+ &= -3 \cdot 16{,}81 + 5\\
+ &= -50{,}43 + 5\\
  &= \green{-45{,}43}
 \end{split}
 
 \begin{split}
-\green{f(4)} &= -3 \cdot \green{4}^2 + 5\\\\\
- &= -3 \cdot 16 + 5\\\\\
- &= -48 + 5\\\\\
+\green{f(4)} &= -3 \cdot \green{4}^2 + 5\\
+ &= -3 \cdot 16 + 5\\
+ &= -48 + 5\\
  &= \green{-43}
 \end{split}
 
@@ -95,8 +95,8 @@ Nu we $\green{f(4{,}1)}$ en $\green{f(4)}$ kennen, kunnen we verder met het
 berekenen van ons differentiequotiënt:
 
 \begin{split}
-\frac{\green{f(4{,}1)} - \green{f(4)}}{\orange{0{,}1}} &= \frac{\green{-45{,}43} - (\green{-43})}{\orange{0{,}1}}\\\\\
- &= \frac{\green{-2{,}43}}{\orange{0{,}1}}\\\\\
+\frac{\green{f(4{,}1)} - \green{f(4)}}{\orange{0{,}1}} &= \frac{\green{-45{,}43} - (\green{-43})}{\orange{0{,}1}}\\
+ &= \frac{\green{-2{,}43}}{\orange{0{,}1}}\\
  &= -24{,}3
 \end{split}
 
@@ -121,7 +121,7 @@ verwaarloosbaar is. Hoe dichter we $\Delta x$ naar $0$ brengen, hoe dichter de
 uitkomst van het differentiequotiënt gaat naar $-24$. We kunnen dus zeggen dat:
 
 \begin{split}
-f'(4) &= \lim\_{\Delta x \to 0} \frac{\green{f(4 + \Delta x)} - \green{f(4)}}{\orange{\Delta x}}\\\\\
+f'(4) &= \lim\_{\Delta x \to 0} \frac{\green{f(4 + \Delta x)} - \green{f(4)}}{\orange{\Delta x}}\\
  &= -24
 \end{split}
 
@@ -149,10 +149,10 @@ x$ even laten voor wat het is en $\green{f(4 + \Delta x)}$ uitrekenen door
 letterlijk $\green{4 + \Delta x}$ in te vullen in ons functievoorschrift:
 
 \begin{split}
-\green{f(4 + \Delta x)} &= -3 \cdot (\green{4 + \Delta x})^2 + 5\\\\\
- &= -3 \cdot (16 + 2\cdot 4 \cdot \Delta x + (\Delta x)^2) + 5\\\\\
- &= -3 \cdot (16 + 8\Delta x + (\Delta x)^2) + 5\\\\\
- &= -48 - 24\Delta x -3(\Delta x)^2 + 5\\\\\
+\green{f(4 + \Delta x)} &= -3 \cdot (\green{4 + \Delta x})^2 + 5\\
+ &= -3 \cdot (16 + 2\cdot 4 \cdot \Delta x + (\Delta x)^2) + 5\\
+ &= -3 \cdot (16 + 8\Delta x + (\Delta x)^2) + 5\\
+ &= -48 - 24\Delta x -3(\Delta x)^2 + 5\\
  &= \green{-43 -24\Delta x -3(\Delta x)^2}
 \end{split}
 
@@ -163,9 +163,9 @@ Als we nu ook nog $\green{f(4)}$ uitrekenen, kennen we de twee termen in de
 teller <Mute text="(bovenaan)" /> van de breuk:
 
 \begin{split}
-\green{f(4)} &= -3 \cdot \green{4}^2 + 5\\\\\
- &= -3 \cdot 16 + 5\\\\\
- &= -48 + 5\\\\\
+\green{f(4)} &= -3 \cdot \green{4}^2 + 5\\
+ &= -3 \cdot 16 + 5\\
+ &= -48 + 5\\
  &= \green{-43}
 \end{split}
 
@@ -174,10 +174,10 @@ van ons differentiequotiënt al voor een stuk uitrekenen. Van de limiet trekken
 we ons voorlopig niets aan, die schrijven we gewoon over.
 
 \begin{split}
-f'(4) &= \lim\_{\Delta x \to 0} \frac{\green{f(4 + \Delta x)} - \green{f(4)}}{\orange{\Delta x}}\\\\\
- &= \lim\_{\Delta x \to 0} \frac{\green{-43 - 24\Delta x - 3(\Delta x)^2} - (\green{-43})}{\orange{\Delta x}}\\\\\
- &= \lim\_{\Delta x \to 0} \frac{\green{-43 - 24\Delta x - 3(\Delta x)^2} + 43}{\orange{\Delta x}}\\\\\
- &= \lim\_{\Delta x \to 0} \frac{\green{- 24\Delta x - 3(\Delta x)^2}}{\orange{\Delta x}}\\\\\
+f'(4) &= \lim\_{\Delta x \to 0} \frac{\green{f(4 + \Delta x)} - \green{f(4)}}{\orange{\Delta x}}\\
+ &= \lim\_{\Delta x \to 0} \frac{\green{-43 - 24\Delta x - 3(\Delta x)^2} - (\green{-43})}{\orange{\Delta x}}\\
+ &= \lim\_{\Delta x \to 0} \frac{\green{-43 - 24\Delta x - 3(\Delta x)^2} + 43}{\orange{\Delta x}}\\
+ &= \lim\_{\Delta x \to 0} \frac{\green{- 24\Delta x - 3(\Delta x)^2}}{\orange{\Delta x}}\\
 \end{split}
 
 Nu krijgen we een breuk die we kunnen **vereenvoudigen**, want zowel teller als
@@ -185,7 +185,7 @@ noemer zijn **deelbaar door $\Delta x$**:
 
 \begin{split}
 \lim\_{\Delta x \to 0} \frac{\green{- 24\Delta x - 3(\Delta x)^2}}{\orange{\Delta x}}
-&= \lim\_{\Delta x \to 0} \frac{\green{- 24 - 3\Delta x}}{\orange{1}} \\\\\
+&= \lim\_{\Delta x \to 0} \frac{\green{- 24 - 3\Delta x}}{\orange{1}} \\
 \end{split}
 
 Zo krijgen we een heel eenvoudige limiet:
