--- a/src/content/lessen/wiskunde/eentermen/product/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/product/index.mdx
@@ -27,7 +27,7 @@ $a$** hebben. De rekenregel voor het vermenigvuldigen van machten met hetzelfde
 grondtal zegt dat we in dat geval de **exponenten bij elkaar moeten optellen**:
 
 \begin{split}
-a^2\cdot a^3 &= a^{2 + 3}\\\\\
+a^2\cdot a^3 &= a^{2 + 3}\\
  &= a^5
 \end{split}
 
@@ -42,7 +42,7 @@ rekenregel voor het delen van machten met hetzelfde grondtal zegt dat we in dat
 geval de **exponenten van elkaar moeten aftrekken**:
 
 \begin{split}
-x^5:x^2 &= x^{5 - 2}\\\\\
+x^5:x^2 &= x^{5 - 2}\\
  &= x^3
 \end{split}
 
@@ -86,7 +86,7 @@ vermenigvuldigen:
 
 \begin{split}
 \orange{-3}x^3y^2 \cdot \orange{4}xy^2
-&= (\orange{-3\cdot 4})\cdot x^3y^2\cdot xy^2\\\\\
+&= (\orange{-3\cdot 4})\cdot x^3y^2\cdot xy^2\\
  &= \orange{-12}\cdot x^3y^2\cdot xy^2
 \end{split}
 
@@ -96,7 +96,7 @@ hebben:
 
 \begin{split}
 -12\cdot \orange{x^3}y^2\cdot \orange{x}y^2
-&= -12\cdot\orange{x^{3 + 1}}\cdot y^2\cdot y^2\\\\\
+&= -12\cdot\orange{x^{3 + 1}}\cdot y^2\cdot y^2\\
  &= -12\orange{x^{4}}\cdot y^2\cdot y^2
 \end{split}
 
@@ -106,7 +106,7 @@ die $y$ als grondtal hebben:
 
 \begin{split}
 -12x^{4}\cdot \orange{y^2}\cdot \orange{y^2}
-&= -12x^{4}\cdot \orange{y^{2 + 2}}\\\\\
+&= -12x^{4}\cdot \orange{y^{2 + 2}}\\
  &= -12x^{4}\orange{y^{4}}
 \end{split}
 
@@ -133,8 +133,8 @@ delen door de coëfficiënt van de eenterm in de deler (de $-7$):
 
 \begin{split}
 \orange{21}u^2v^4:(\orange{-7}uv^2)
-&= \big(\orange{21}:(\orange{-7})\big)u^2v^4:(uv^2)\\\\\
- &= \orange{-3}u^2v^4:(uv^2)\\\\\
+&= \big(\orange{21}:(\orange{-7})\big)u^2v^4:(uv^2)\\
+ &= \orange{-3}u^2v^4:(uv^2)\\
 \end{split}
 
 Vervolgens moeten we het **lettergedeelte** van het deeltal (de $u^2v^4$) delen
@@ -144,17 +144,17 @@ zullen beginnen met het delen van de machten met grondtal $u$:
 
 \begin{split}
 -3\orange{u^2}v^4:(\orange{u}v^2)
-&= -3\orange{u^{2 - 1}}v^4:v^2\\\\\
- &= -3\orange{u^{1}}v^4:v^2\\\\\
- &= -3\orange{u}v^4:v^2\\\\\
+&= -3\orange{u^{2 - 1}}v^4:v^2\\
+ &= -3\orange{u^{1}}v^4:v^2\\
+ &= -3\orange{u}v^4:v^2\\
 \end{split}
 
 Ten slotte delen we ook de factoren die grondtal $v$ hebben:
 
 \begin{split}
 -3u\orange{v^4}:\orange{v^2}
-& = -3u\orange{v^{4 - 2}}\\\\\
- & = -3u\orange{v^{2}}\\\\\
+& = -3u\orange{v^{4 - 2}}\\
+ & = -3u\orange{v^{2}}\\
 \end{split}
 
 Klaar! 🎉 Het resultaat van onze deling is:
@@ -177,10 +177,10 @@ vermenigvuldigen:
 
 \begin{split}
 \orange{x^{(m + 1)}}y^n\cdot x^2y^n
-&= y^n\cdot \orange{x^{(m + 1)}}x^2\cdot y^n\\\\\
- &= y^n\cdot x^{\orange{(m + 1)} + 2}y^n\\\\\
- &= y^n\cdot x^{\orange{m + 1} + 2}y^n\\\\\
- &= y^n\cdot x^{(m + 3)}y^n\\\\\
+&= y^n\cdot \orange{x^{(m + 1)}}x^2\cdot y^n\\
+ &= y^n\cdot x^{\orange{(m + 1)} + 2}y^n\\
+ &= y^n\cdot x^{\orange{m + 1} + 2}y^n\\
+ &= y^n\cdot x^{(m + 3)}y^n\\
 \end{split}
 
 Je ziet dat we ook hier weer niets meer doen dan de exponenten bij elkaar op te
@@ -189,9 +189,9 @@ als grondtal:
 
 \begin{split}
 \orange{y^n}\cdot x^{(m + 3)}y^n
-&= x^{(m + 3)}\cdot\orange{y^n}y^n\\\\\
- &= x^{(m + 3)}y^{\orange{n} + n}\\\\\
- &= x^{(m + 3)}y^{2n}\\\\\
+&= x^{(m + 3)}\cdot\orange{y^n}y^n\\
+ &= x^{(m + 3)}y^{\orange{n} + n}\\
+ &= x^{(m + 3)}y^{2n}\\
 \end{split}
 
 We krijgen het volgende resultaat:
@@ -204,9 +204,9 @@ machten met hetzelfde grondtal toe. Een eenvoudig voorbeeld:
 
 \begin{split}
 a^{(m+2)}b^m:(a^{(2m - 1)}b^3)
-&= a^{(m+2) - (2m - 1)}b^{m - 3}\\\\\
- &= a^{m+ 2 - 2m + 1}b^{m - 3}\\\\\
- &= a^{-m + 3}b^{m - 3}\\\\\
+&= a^{(m+2) - (2m - 1)}b^{m - 3}\\
+ &= a^{m+ 2 - 2m + 1}b^{m - 3}\\
+ &= a^{-m + 3}b^{m - 3}\\
 \end{split}
 
 De uitkomst van deze deling is dus:
