--- a/src/content/lessen/wiskunde/eentermen/variabelen/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/variabelen/index.mdx
@@ -58,8 +58,8 @@ We zeggen dus dat de variabelen $\orange{\text{lengte}}$ en
 $\blue{\text{breedte}}$ elementen zijn van $\mathbb{Q}^+$. Dat noteren we als volgt:
 
 \begin{split}
-\orange{\text{lengte}} &\in \mathbb{Q}^+\\\\\
- \blue{\text{breedte}} &\in \mathbb{Q}^+\\\\\
+\orange{\text{lengte}} &\in \mathbb{Q}^+\\
+ \blue{\text{breedte}} &\in \mathbb{Q}^+\\
 \end{split}
 
 Hetzelfde geldt voor de oppervlakte, die ook een positief rationaal getal moet zijn:
@@ -105,8 +105,8 @@ variabelen $\orange{l}$ en $\blue{b}$ invullen in de formule voor de
 oppervlakte:
 
 \begin{split}
-A &= \orange{l} \cdot \blue{b}\\\\\
- \Leftrightarrow A &= \orange{5{,}0~\si{m}} \cdot \blue{4{,}0~\si{m}}\\\\\
+A &= \orange{l} \cdot \blue{b}\\
+ \Leftrightarrow A &= \orange{5{,}0~\si{m}} \cdot \blue{4{,}0~\si{m}}\\
  \Leftrightarrow A &= 20~\si{m}^2
 \end{split}
 
