--- a/src/content/lessen/wiskunde/eentermen/vereenvoudigen/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/vereenvoudigen/index.mdx
@@ -56,8 +56,8 @@ in gedachten het **minteken te vervangen door $(-1)$** en die mee te verheffen
 tot de macht:
 
 \begin{split}
-(\orange{-}y)^2 &= (\orange{(-1)}\cdot y)^2\\\\\
- &= \orange{(-1)}^2\cdot y^2\\\\\
+(\orange{-}y)^2 &= (\orange{(-1)}\cdot y)^2\\
+ &= \orange{(-1)}^2\cdot y^2\\
  &= y^2
 \end{split}
 
@@ -88,8 +88,8 @@ zetten we alle $(-1)-$en voorop en bepalen we het uiteindelijke teken van de
 coëfficiënt.
 
 \begin{split}
-\orange{-}3y\cdot 2^3x^3z^3\cdot y^2\cdot \blue{(-2)} \cdot \green{(-5)} &= \orange{(-1)}\cdot 3y\cdot 2^3x^3z^3\cdot y^2\cdot \blue{(-1)\cdot 2} \cdot \green{(-1)\cdot 5}\\\\\
- &= \orange{(-1)}\cdot\blue{(-1)}\cdot\green{(-1)}\cdot 3\cdot y\cdot 2^3x^3z^3\cdot y^2\cdot \blue{2} \cdot \green{5}\\\\\
+\orange{-}3y\cdot 2^3x^3z^3\cdot y^2\cdot \blue{(-2)} \cdot \green{(-5)} &= \orange{(-1)}\cdot 3y\cdot 2^3x^3z^3\cdot y^2\cdot \blue{(-1)\cdot 2} \cdot \green{(-1)\cdot 5}\\
+ &= \orange{(-1)}\cdot\blue{(-1)}\cdot\green{(-1)}\cdot 3\cdot y\cdot 2^3x^3z^3\cdot y^2\cdot \blue{2} \cdot \green{5}\\
  &= \orange{-}3\cdot y\cdot 2^3x^3z^3\cdot y^2\cdot \blue{2} \cdot \green{5}
 \end{split}
 
@@ -100,9 +100,9 @@ text="(Hetzelfde geldt voor reële getallen.)" /> Dat betekent dat de volgorde
 waarin je een vermenigvuldiging uitrekent, niet uitmaakt:
 
 \begin{split}
-5\cdot 2 \cdot 3 = 30\\\\\
- 3 \cdot 2 \cdot 5 = 30\\\\\
- 2 \cdot 5 \cdot 3 = 30\\\\\
+5\cdot 2 \cdot 3 = 30\\
+ 3 \cdot 2 \cdot 5 = 30\\
+ 2 \cdot 5 \cdot 3 = 30\\
 \end{split}
 
 Je mag in een vermenigvuldiging van rationale getallen de **factoren dus altijd
@@ -114,11 +114,11 @@ zeiden we dat we in een vermenigvuldiging de factoren altijd van plaats mogen
 veranderen, dus we mogen gerust alle $(-1)-$en voorop zetten.
 
 \begin{split}
-\orange{-}5\cdot (\orange{-}2) \cdot (\orange{-}3) &= - 30\\\\\
- \orange{-}2\cdot (\orange{-}3) \cdot (\orange{-}5) &= - 30\\\\\
- \orange{-}2\cdot (\orange{-}5) \cdot (\orange{-}3) &= - 30\\\\\
- \orange{(-1)} \cdot 2 \cdot \orange{(-1)} \cdot 5 \cdot \orange{(-1)} \cdot 3 &= - 30\\\\\
- \orange{(-1)} \cdot \orange{(-1)} \cdot \orange{(-1)} \cdot 2\cdot 5 \cdot 3 &= - 30\\\\\
+\orange{-}5\cdot (\orange{-}2) \cdot (\orange{-}3) &= - 30\\
+ \orange{-}2\cdot (\orange{-}3) \cdot (\orange{-}5) &= - 30\\
+ \orange{-}2\cdot (\orange{-}5) \cdot (\orange{-}3) &= - 30\\
+ \orange{(-1)} \cdot 2 \cdot \orange{(-1)} \cdot 5 \cdot \orange{(-1)} \cdot 3 &= - 30\\
+ \orange{(-1)} \cdot \orange{(-1)} \cdot \orange{(-1)} \cdot 2\cdot 5 \cdot 3 &= - 30\\
 \end{split}
 
 
@@ -140,8 +140,8 @@ $$-3\gray{\cdot y}\cdot 2^3\gray{x^3z^3\cdot y^2}\cdot 2 \cdot 5$$
 Dit uitrekenen geeft:
 
 \begin{split}
--3\cdot 2^3 \cdot 2 \cdot 5 &= -3 \cdot 8 \cdot 10\\\\\
- &= -24 \cdot 10 \\\\\
+-3\cdot 2^3 \cdot 2 \cdot 5 &= -3 \cdot 8 \cdot 10\\
+ &= -24 \cdot 10 \\
  &= -240
 \end{split}
 
@@ -157,9 +157,9 @@ text="(Dat is ook zo voor reële getallen.)" /> Dat betekent dat de volgorde
 waarin je een vermenigvuldiging uitrekent, niet uitmaakt:
 
 \begin{split}
-4\cdot 5 \cdot 7 = 140\\\\\
- 7 \cdot 4 \cdot 5 = 140\\\\\
- 5 \cdot 4 \cdot 7 = 140\\\\\
+4\cdot 5 \cdot 7 = 140\\
+ 7 \cdot 4 \cdot 5 = 140\\
+ 5 \cdot 4 \cdot 7 = 140\\
 \end{split}
 
 Je mag in een vermenigvuldiging van rationale getallen de **factoren dus altijd
@@ -168,9 +168,9 @@ eenterm _rationaal_ zijn <Mute text="(reëel mag ook)" />, mogen we ze dus van
 plaats veranderen.
 
 \begin{split}
-4 \cdot a \cdot b \cdot 3 \\\\\
- = 3 \cdot a \cdot 4 \cdot b\\\\\
- = b \cdot 3 \cdot a \cdot 4\\\\\
+4 \cdot a \cdot b \cdot 3 \\
+ = 3 \cdot a \cdot 4 \cdot b\\
+ = b \cdot 3 \cdot a \cdot 4\\
 \end{split}
 
 We kiezen ervoor om het volledige
@@ -178,9 +178,9 @@ We kiezen ervoor om het volledige
 en als eerste uit te rekenen.
 
 \begin{split}
-\orange{4} \cdot a \cdot b \cdot \orange{3} \\\\\
- = \orange{4 \cdot 3} \cdot a \cdot b \\\\\
- = \orange{12} \cdot a \cdot b \\\\\
+\orange{4} \cdot a \cdot b \cdot \orange{3} \\
+ = \orange{4 \cdot 3} \cdot a \cdot b \\
+ = \orange{12} \cdot a \cdot b \\
 \end{split}
 
 </Expand>
@@ -201,8 +201,8 @@ $$-240\cdot \orange{y}\cdot x^3z^3 \cdot \orange{y^2}$$
 Het optellen van de exponenten van $\orange{y}$ geeft:
 
 \begin{split}
--240\cdot \orange{y^1}\cdot x^3z^3 \cdot \orange{y^2} &= -240\cdot \orange{y^{1 + 2}}\cdot x^3z^3\\\\\
- &= -240\cdot \orange{y^{3}}\cdot x^3z^3\\\\\
+-240\cdot \orange{y^1}\cdot x^3z^3 \cdot \orange{y^2} &= -240\cdot \orange{y^{1 + 2}}\cdot x^3z^3\\
+ &= -240\cdot \orange{y^{3}}\cdot x^3z^3\\
 \end{split}
 
 <Expand title="Waarom tellen we de exponenten bij elkaar op?">
