--- a/src/content/lessen/wiskunde/functies/nulpunten/index.mdx
+++ b/src/content/lessen/wiskunde/functies/nulpunten/index.mdx
@@ -31,8 +31,8 @@ x-waarden die het voorschrift <Mute text="en dus de y-waarde" /> _nul_ maken.
 Voor het bovenstaande voorbeeld:
 
 \begin{split}
-f(x) = 0 \\\\\
- \Leftrightarrow x - 2 = 0 \\\\\
+f(x) = 0 \\
+ \Leftrightarrow x - 2 = 0 \\
  \Leftrightarrow x = 2
 \end{split}
 
