--- a/src/content/lessen/wiskunde/rekenen/volgorde_van_de_bewerkingen/index.mdx
+++ b/src/content/lessen/wiskunde/rekenen/volgorde_van_de_bewerkingen/index.mdx
@@ -25,8 +25,8 @@ Zo?
 \begin{equation}
 \begin{split}
 \neg{4 - 5} \cdot 8 ^ 2
-&= \neg{-1} \cdot 8 ^ 2 \\\\\
- &= -8 ^ 2 \\\\\
+&= \neg{-1} \cdot 8 ^ 2 \\
+ &= -8 ^ 2 \\
  &= \neg{-64}
 \end{split}
 \label{eq:sumfirst}
@@ -36,8 +36,8 @@ Of zo?
 \begin{equation}
 \begin{split}
 4 - \neg{5 \cdot 8} ^ 2
-&= 4 - \neg{40}^2 \\\\\
- &= 4 - \neg{1600} \\\\\
+&= 4 - \neg{40}^2 \\
+ &= 4 - \neg{1600} \\
  &= \neg{- 1596}
 \end{split}
 \label{eq:multfirst}
@@ -47,8 +47,8 @@ Of misschien zo?
 \begin{equation}
 \begin{split}
 4 - 5 \cdot \pos{8 ^ 2}
-&= 4 - 5 \cdot \pos{64} \\\\\
- &= 4 - \pos{320} \\\\\
+&= 4 - 5 \cdot \pos{64} \\
+ &= 4 - \pos{320} \\
  &= \pos{- 316}
 \end{split}
 \label{eq:expfirst}
@@ -80,7 +80,7 @@ spreken we af om gewoon **van links naar rechts** te werken.
 De uitdrukking $8 \div 4 \cdot 3$ rekenen we dus uit als
 \begin{split}
 \pos{8 \div 4} \cdot 3
-&= \pos{2} \cdot 3 \\\\\
+&= \pos{2} \cdot 3 \\
  &= \pos{6}
 \end{split}
 omdat we de deling eerst tegenkomen wanneer we van links naar rechts lezen.
@@ -168,12 +168,12 @@ stoppen we dan in de oorspronkelijke uitdrukking.
 \begin{equation}
 \begin{split}
 \sqrt{-6 + \clra{5^2} \cdot 2}
-&= \sqrt{-6 + \clra{25} \cdot 2} \\\\\
- &= \sqrt{-6 + \clra{25 \cdot 2}} \\\\\
- &= \sqrt{-6 + \clra{50}} \\\\\
- &= \sqrt{\clra{-6 + 50}} \\\\\
- &= \sqrt{\clra{44}} \\\\\
- &= \clra{\sqrt{44}} \\\\\
+&= \sqrt{-6 + \clra{25} \cdot 2} \\
+ &= \sqrt{-6 + \clra{25 \cdot 2}} \\
+ &= \sqrt{-6 + \clra{50}} \\
+ &= \sqrt{\clra{-6 + 50}} \\
+ &= \sqrt{\clra{44}} \\
+ &= \clra{\sqrt{44}} \\
  &\approx \clra{6{,}63\ldots}
 \end{split}
 \end{equation}
