--- a/src/content/lessen/wiskunde/veeltermen/bewerkingen/index.mdx
+++ b/src/content/lessen/wiskunde/veeltermen/bewerkingen/index.mdx
@@ -66,8 +66,8 @@ Nu krijgen we een veelterm die we eenvoudig kunnen **herleiden** door de
 gelijksoortige eentermen bij elkaar op te tellen:
 
 \begin{split}
-\orange{2a^2b} \green{- 4ab^3} \green{+ 2ab^3} \orange{- 3a^2b} &= \orange{(2 - 3)\cdot a^2b} + \green{(-4 + 2)\cdot ab^3}\\\\\
- &= \orange{-a^2b} - \green{2\cdot ab^3}\\\\\
+\orange{2a^2b} \green{- 4ab^3} \green{+ 2ab^3} \orange{- 3a^2b} &= \orange{(2 - 3)\cdot a^2b} + \green{(-4 + 2)\cdot ab^3}\\
+ &= \orange{-a^2b} - \green{2\cdot ab^3}\\
 \end{split}
 
 > Als je niet meer goed weet wat het juist betekent om een veelterm te
@@ -101,8 +101,8 @@ bij het optellen van veeltermen:
 
 \begin{split}
 \orange{-2x^3} \green{- 5x^2y} \blue{+ 6} \green{- 2x^2y} \blue{- 3} \orange{+ 6x^3}
-&= \orange{(-2 + 6)\cdot x^3} + \green{(- 5 - 2)\cdot x^2y} + \blue{(6 - 3)}\\\\\
- &= \orange{4\cdot x^3} -\green{7\cdot x^2y} + \blue{3}\\\\\
+&= \orange{(-2 + 6)\cdot x^3} + \green{(- 5 - 2)\cdot x^2y} + \blue{(6 - 3)}\\
+ &= \orange{4\cdot x^3} -\green{7\cdot x^2y} + \blue{3}\\
 \end{split}
 
 ## Een veelterm vermenigvuldigen met een eenterm
@@ -183,7 +183,7 @@ $$(-2u^2v^3 + 2u^2v^2 - 4uv^3):(\orange{u}v^2) = (-3\orange{u}v^3 + 2\orange{u}v
 > bijvoorbeeld, krijgen we na een deling door $u$ $-2\orange{u}v^3$ omdat
 > \begin{split}
 
-    -2\orange{u^2}v^3:\orange{u} &= -2\orange{u^{2 - 1}}v^3\\\\\
+    -2\orange{u^2}v^3:\orange{u} &= -2\orange{u^{2 - 1}}v^3\\
     &= -2\orange{u}v^3
 
 \end{split}
@@ -191,9 +191,9 @@ $$(-2u^2v^3 + 2u^2v^2 - 4uv^3):(\orange{u}v^2) = (-3\orange{u}v^3 + 2\orange{u}v
 > Bij de deling van $-4uv^3$ door $u$ **valt de $u$ in de term weg** omdat
 > \begin{split}
 
-    -4\orange{u}v^3:\orange{u} &= -4\orange{u^{1-1}}v^3\\\\\
-    &= -4\orange{u^0}v^3\\\\\
-    &= -4\cdot \orange{1} \cdot v^3\\\\\
+    -4\orange{u}v^3:\orange{u} &= -4\orange{u^{1-1}}v^3\\
+    &= -4\orange{u^0}v^3\\
+    &= -4\cdot \orange{1} \cdot v^3\\
     &= -4v^3
 
 \end{split}
@@ -265,8 +265,8 @@ coëfficiënten van deze termen bij elkaar op:
 
 \begin{split}
 -4a^3b + 8a^3b^2 \orange{+ 3a^2b^2} - 6a^2b^3 + a^2b \orange{- 2a^2b^2}
-&= -4a^3b + 8a^3b^2 \orange{+ (3 - 2)a^2b^2} - 6a^2b^3 + a^2b\\\\\
- &= -4a^3b + 8a^3b^2 \orange{+ a^2b^2} - 6a^2b^3 + a^2b\\\\\
+&= -4a^3b + 8a^3b^2 \orange{+ (3 - 2)a^2b^2} - 6a^2b^3 + a^2b\\
+ &= -4a^3b + 8a^3b^2 \orange{+ a^2b^2} - 6a^2b^3 + a^2b\\
 \end{split}
 
 Tenslotte **rangschikken** we de veelterm volgens dalende graad van de
@@ -288,10 +288,10 @@ vermenigvuldiging de **exponenten moeten optellen**. We zullen eens tonen hoe
 dat gaat wanneer we die $x^{(m + 1)}$ binnen de haakjes brengen:
 
 \begin{split}
-\orange{x^{(m + 1)}}y^n\cdot (-3x + x^2y^n) &= y^n\cdot (-3x\cdot\orange{x^{(m + 1)}} + x^2\cdot\orange{x^{(m + 1)}}y^n)\\\\\
- &= y^n\cdot (-3x^{1 + \orange{(m + 1)}} + x^{2 + \orange{(m + 1)}}y^n)\\\\\
- &= y^n\cdot (-3x^{1 + \orange{m + 1}} + x^{2 + \orange{m + 1}}y^n)\\\\\
- &= y^n\cdot (-3x^{(m + 2)} + x^{(m + 3)}y^n)\\\\\
+\orange{x^{(m + 1)}}y^n\cdot (-3x + x^2y^n) &= y^n\cdot (-3x\cdot\orange{x^{(m + 1)}} + x^2\cdot\orange{x^{(m + 1)}}y^n)\\
+ &= y^n\cdot (-3x^{1 + \orange{(m + 1)}} + x^{2 + \orange{(m + 1)}}y^n)\\
+ &= y^n\cdot (-3x^{1 + \orange{m + 1}} + x^{2 + \orange{m + 1}}y^n)\\
+ &= y^n\cdot (-3x^{(m + 2)} + x^{(m + 3)}y^n)\\
 \end{split}
 
 Je ziet dat we ook hier weer niets meer doen dan de exponenten bij elkaar op te
@@ -299,9 +299,9 @@ tellen. We brengen nu op dezelfde manier de $y^n$ naar binnen:
 
 \begin{split}
 \orange{y^n}\cdot (-3x^{(m + 2)} + x^{(m + 3)}y^n)
-&= (-3x^{(m + 2)}\cdot\orange{y^n} + x^{(m + 3)}y^n\cdot\orange{y^n})\\\\\
- &= (-3x^{(m + 2)}y^n + x^{(m + 3)}y^{n + \orange{n}})\\\\\
- &= (-3x^{(m + 2)}y^n + x^{(m + 3)}y^{2n})\\\\\
+&= (-3x^{(m + 2)}\cdot\orange{y^n} + x^{(m + 3)}y^n\cdot\orange{y^n})\\
+ &= (-3x^{(m + 2)}y^n + x^{(m + 3)}y^{n + \orange{n}})\\
+ &= (-3x^{(m + 2)}y^n + x^{(m + 3)}y^{2n})\\
 \end{split}
 
 De haakjes rond onze uitkomst kunnen we gerust weglaten. We krijgen dus het
