--- a/src/content/lessen/wiskunde/veeltermen/getalwaarde/index.mdx
+++ b/src/content/lessen/wiskunde/veeltermen/getalwaarde/index.mdx
@@ -21,8 +21,8 @@ Dat gaat als volgt:
    $$-5\orange{a}\green{b}^2 + 3\orange{a} = -5\cdot\orange{2}\cdot\green{(-1)}^2 + 3\cdot \orange{2} $$
 2. Je krijgt een bewerking met enkel getallen. **Reken die bewerking uit**:
    \begin{split}
-   -5\cdot\orange{2}\green{(-1)}^2 + 3\cdot \orange{2} &= -5\cdot\orange{2}\cdot\green{1} + 3\cdot \orange{2}\\\\\
-    &= -10 + 6\\\\\
+   -5\cdot\orange{2}\green{(-1)}^2 + 3\cdot \orange{2} &= -5\cdot\orange{2}\cdot\green{1} + 3\cdot \orange{2}\\
+    &= -10 + 6\\
     &= -4
    \end{split}
 
@@ -42,9 +42,9 @@ variabele erdoor vervangt**.
 We kunnen ook eens kijken wat de getalwaarde van de veelterm $-5ab^2 + 3a$ is voor $\orange{a=-3}$ en $\green{b=-2}$:
 
 \begin{split}
--5\orange{a}\green{b}^2 + 3\orange{a} &= -5\cdot\orange{(-3)}\green{(-2)}^2 + 3\cdot \orange{(-3)}\\\\\
-&= -5\cdot\orange{(-3)}\cdot\green{4} + 3\cdot \orange{(-3)}\\\\\
- &= 60 + (-9)\\\\\
+-5\orange{a}\green{b}^2 + 3\orange{a} &= -5\cdot\orange{(-3)}\green{(-2)}^2 + 3\cdot \orange{(-3)}\\
+&= -5\cdot\orange{(-3)}\cdot\green{4} + 3\cdot \orange{(-3)}\\
+ &= 60 + (-9)\\
  &= 51
 \end{split}
 
@@ -58,8 +58,8 @@ Bepaal de getalwaarde van de veelterm $-3x^2 + 2x - 1$ voor $x = -3$:
 
 \begin{split}
 -3\orange{x}^2 + 2\orange{x} - 1 &= -3\cdot\orange{(-3)}^2 + 2\cdot \orange{(-3)}\\\\
-&= -3 \cdot \orange{(-9)} + 2 \cdot \orange{(-3)}\\\\\
- &= 27 + (-6)\\\\\
+&= -3 \cdot \orange{(-9)} + 2 \cdot \orange{(-3)}\\
+ &= 27 + (-6)\\
  &= 21
 \end{split}
 
@@ -68,9 +68,9 @@ $q = -\sqrt{2}$:
 
 \begin{split}
 2\orange{p}\green{q}^3 + 3\orange{p}^2\green{q} - \orange{p} + 2\green{q} &=
-2\cdot\orange{5}\cdot\green{(-\sqrt{2})}^3 + 3\cdot\orange{5}^2\cdot\green{(-\sqrt{2})} - \orange{5} + 2\cdot\green{(-\sqrt{2})}\\\\\
- &= 2\cdot\orange{5}\cdot(-2\sqrt{2}) + 3\cdot 25\cdot\green{(-\sqrt{2})} - \orange{5} + 2\cdot\green{(-\sqrt{2})}\\\\\
- &= -20\sqrt{2} - 75\sqrt{2} - \orange{5} - 2\sqrt{2}\\\\\
+2\cdot\orange{5}\cdot\green{(-\sqrt{2})}^3 + 3\cdot\orange{5}^2\cdot\green{(-\sqrt{2})} - \orange{5} + 2\cdot\green{(-\sqrt{2})}\\
+ &= 2\cdot\orange{5}\cdot(-2\sqrt{2}) + 3\cdot 25\cdot\green{(-\sqrt{2})} - \orange{5} + 2\cdot\green{(-\sqrt{2})}\\
+ &= -20\sqrt{2} - 75\sqrt{2} - \orange{5} - 2\sqrt{2}\\
  &= - \orange{5} - 97\sqrt{2}
 \end{split}
 
