--- a/src/content/lessen/wiskunde/veeltermen/vereenvoudigen/index.mdx
+++ b/src/content/lessen/wiskunde/veeltermen/vereenvoudigen/index.mdx
@@ -67,11 +67,11 @@ veelterm apart te vereenvoudigen. Wanneer die niet vereenvoudigbaar meer is,
 pas je de **distributieve eigenschap** toe.
 
 -   \begin{split}
-    3(p^2 + \orange{(-5p^3)}) - 2p &= 3(p^2 - \orange{5p^3}) - 2p\\\\\
+    3(p^2 + \orange{(-5p^3)}) - 2p &= 3(p^2 - \orange{5p^3}) - 2p\\
      &= \orange{3p^2 - 15p^3} - 2p
     \end{split}
 -   \begin{split}
-    -6x^4 - 2x (\orange{-3(4y^2)} - 2y + 5) &= - 6x^4 - 2x (\orange{-12y^2} - 2y + 5)\\\\\
+    -6x^4 - 2x (\orange{-3(4y^2)} - 2y + 5) &= - 6x^4 - 2x (\orange{-12y^2} - 2y + 5)\\
      &= - 6x^4 \orange{+ 24xy^2 + 4xy - 10x}
     \end{split}
 -   $$5q^3r^2 \orange{- (q + 2r)} = 5q^3 r^2 \orange{- q - 2r}$$
@@ -131,15 +131,15 @@ tellen** en het **lettergedeelte te laten staan**.
 We werken de voorbeelden van hierboven verder uit:
 
 -   \begin{split}
-    \orange{-3xy^2} + 5x^3 \orange{+ 9 xy^2} &= \orange{(-3 + 9)xy^2} + 5x^3\\\\\
+    \orange{-3xy^2} + 5x^3 \orange{+ 9 xy^2} &= \orange{(-3 + 9)xy^2} + 5x^3\\
      &= \orange{6xy^2} + 5x^3
     \end{split}
 -   \begin{split}
-    \orange{-2qr} + p^2qr^3 \green{- 6p} \orange{+ 5qr} \green{+ 3 p} &= \orange{(-2 + 5)qr} + p^2qr^3 + \green{(-6 + 3)p}\\\\\
+    \orange{-2qr} + p^2qr^3 \green{- 6p} \orange{+ 5qr} \green{+ 3 p} &= \orange{(-2 + 5)qr} + p^2qr^3 + \green{(-6 + 3)p}\\
      &= \orange{3qr} + p^2qr^3 \green{-3p}
     \end{split}
 -   \begin{split}
-    \orange{\frac{4}{5}a^2b} \green{- 2b} + \frac{4}{5}a^2 \green{+ \frac{4}{5}b} \orange{- a^2b} &= \orange{(\frac{4}{5} - 1)a^2b} + \green{(-2+ \frac{4}{5})b} + \frac{4}{5}a^2\\\\\
+    \orange{\frac{4}{5}a^2b} \green{- 2b} + \frac{4}{5}a^2 \green{+ \frac{4}{5}b} \orange{- a^2b} &= \orange{(\frac{4}{5} - 1)a^2b} + \green{(-2+ \frac{4}{5})b} + \frac{4}{5}a^2\\
      &= \orange{-\frac{1}{5}a^2b} \green{-\frac{6}{5}b} + \frac{4}{5}a^2
     \end{split}
 
