--- a/src/content/lessen/fysica/grootheden_eenheden/formules_omvormen/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/formules_omvormen/index.mdx
@@ -25,10 +25,10 @@ Als we de massadichtheid willen berekenen wanneer we van een stof de massa $\ora
 
 Bijvoorbeeld: we leggen een kubusvormig blokje kurk met een zijde van $5 \si{ cm}$ op een weegschaal en lezen af dat het blokje een massa heeft van $26 \si{ g}$. Dan is de massadichtheid van kurk:
 \begin{split}
-\rho &= \frac{\si{m}}{\si{V}} \\\\\
-&= \frac{26 \si{ g}}{5 \si{ cm} \cdot 5 \si{ cm} \cdot 5 \si{ cm}}\\\\\
-&= \frac{26 \si{ g}}{125 \si{ cm}^3}\\\\\
-&= 0{,}208 \frac{\si{g}}{\si{cm}^3}\\\\\
+\rho &= \frac{\si{m}}{\si{V}} \\
+&= \frac{26 \si{ g}}{5 \si{ cm} \cdot 5 \si{ cm} \cdot 5 \si{ cm}}\\
+&= \frac{26 \si{ g}}{125 \si{ cm}^3}\\
+&= 0{,}208 \frac{\si{g}}{\si{cm}^3}\\
 &\approx 0{,}21 \frac{\si{g}}{\si{cm}^3}
 \end{split}
 
@@ -36,22 +36,22 @@ Bijvoorbeeld: we leggen een kubusvormig blokje kurk met een zijde van $5 \si{ cm
 
 De technieken die we gebruiken om [vergelijkingen om te vormen](../../wiskunde/1g_vgl/omvormen), kunnen we ook gebruiken om formules om te vormen. Zo kunnen we de formule voor massadichtheid omvormen zodat $m$ alleen overblijft aan één kant:
 \begin{split}
-\rho &= \frac{m}{V}\\\\\
-\Leftrightarrow \rho \cdot \orange{V} &= \frac{m}{V} \cdot \orange{V}\\\\\
-\Leftrightarrow \rho \cdot \orange{V} &= m \cdot \frac{\orange{V}}{V} \\\\\
-\Leftrightarrow \rho \cdot \orange{V} &= m \cdot 1 \\\\\
-\Leftrightarrow \rho \cdot \orange{V} &= m \\\\\
-\Leftrightarrow m &= \rho \cdot V \\\\\
+\rho &= \frac{m}{V}\\
+\Leftrightarrow \rho \cdot \orange{V} &= \frac{m}{V} \cdot \orange{V}\\
+\Leftrightarrow \rho \cdot \orange{V} &= m \cdot \frac{\orange{V}}{V} \\
+\Leftrightarrow \rho \cdot \orange{V} &= m \cdot 1 \\
+\Leftrightarrow \rho \cdot \orange{V} &= m \\
+\Leftrightarrow m &= \rho \cdot V \\
 \end{split}
 
 Zo kunnen we $m$ berekenen wanneer we $\rho$ en $V$ kennen. We kunnen deze formule dan weer verder omvormen zodat $V$ alleen overblijft aan één kant:
 
 \begin{split}
-m &= \rho \cdot V \\\\\
-\Leftrightarrow \frac{m}{\orange{\rho}} &= \frac{\rho \cdot V}{\orange{\rho}} \\\\\
-\Leftrightarrow \frac{m}{\orange{\rho}} &= \frac{\rho}{\orange{\rho}} \cdot V \\\\\
-\Leftrightarrow \frac{m}{\orange{\rho}} &= 1 \cdot V \\\\\
-\Leftrightarrow \frac{m}{\orange{\rho}} &= V \\\\\
+m &= \rho \cdot V \\
+\Leftrightarrow \frac{m}{\orange{\rho}} &= \frac{\rho \cdot V}{\orange{\rho}} \\
+\Leftrightarrow \frac{m}{\orange{\rho}} &= \frac{\rho}{\orange{\rho}} \cdot V \\
+\Leftrightarrow \frac{m}{\orange{\rho}} &= 1 \cdot V \\
+\Leftrightarrow \frac{m}{\orange{\rho}} &= V \\
 \Leftrightarrow V &= \frac{m}{\rho}
 \end{split}
 
