--- a/src/content/lessen/wiskunde/1g_vgl/intro/index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/intro/index.mdx
@@ -53,8 +53,8 @@ De bedoeling van een vergelijking is meestal om te zoeken **welk(e) getal(len)**
 Voor het eerste voorbeeld $\orange{x} + 6 = 2 - 3\orange{x}$, is er maar één getal waarvoor de
 gelijkheid klopt: $\orange{-1}$:
 \begin{split}
-\orange{-1} + 6 &= 2 - 3 \cdot (\orange{-1})\\\\\
-5 &= 2 + 3\\\\\
+\orange{-1} + 6 &= 2 - 3 \cdot (\orange{-1})\\
+5 &= 2 + 3\\
 5 &= 5
 \end{split}
 
@@ -70,16 +70,16 @@ zit. Voor de vergelijking $x^2 + 2x = 3$ zijn er bijvoorbeeld twee waarden
 die we kunnen invullen voor $x$ zodat de gelijkheid klopt: $\orange{1}$ en
 $\orange{-3}$. Wanneer we $\orange{1}$ invullen krijgen we:
 \begin{split}
-(\orange{1})^2 + 2\cdot (\orange{1}) &= 3\\\\\
- 1 + 2 &= 3\\\\\
- 3 &= 3\\\\\
+(\orange{1})^2 + 2\cdot (\orange{1}) &= 3\\
+ 1 + 2 &= 3\\
+ 3 &= 3\\
 \end{split}
 
 Wanneer we $\orange{-3}$ invullen, krijgen we:
 \begin{split}
-(\orange{-3})^2 + 2\cdot (\orange{-3}) &= 3\\\\\
- 9 - 6 &= 3\\\\\
- 3 &= 3\\\\\
+(\orange{-3})^2 + 2\cdot (\orange{-3}) &= 3\\
+ 9 - 6 &= 3\\
+ 3 &= 3\\
 \end{split}
 
 Zowel $\orange{1}$ als $\orange{-3}$ is een oplossing van de vergelijking. De
