--- a/src/content/lessen/wiskunde/afgeleiden_1/differentiequotient/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/differentiequotient/index.mdx
@@ -40,7 +40,7 @@ Daarvoor moeten we de **afgelegde afstand** <Mute text="(hoeveel (kilo)meter?)"
 /> om die afstand af te leggen:
 
 \begin{split}
-\text{gem. snelheid} &= \frac{\green{\text{afgelegde afstand} }}{\orange{\text{tijd die nodig was}}}\\\\\
+\text{gem. snelheid} &= \frac{\green{\text{afgelegde afstand} }}{\orange{\text{tijd die nodig was}}}\\
 \end{split}
 
 Wanneer de chronometer op $\orange{1{,}00~\si{s}}$ stond, was Maria
@@ -49,10 +49,10 @@ $\green{180~\si{m}}$ ver. De gemiddelde snelheid tussen
 $\orange{1{,}00~\si{s}}$ en $\orange{3{,}00~\si{s}}$ is dus:
 
 \begin{split}
-\text{gem. snelheid} &= \frac{\green{\text{afgelegde afstand} }}{\orange{\text{tijd die nodig was}}}\\\\\
- &= \frac{\green{180~\si{m}} - \green{20~\si{m}}}{\orange{3{,}00~\si{s}} - \orange{1{,}00~\si{s}}}\\\\\
- &= \frac{\green{160~\si{m}}}{\orange{2{,}00~\si{s}}}\\\\\
- &= 80{,}0~\si{m/s}\\\\\
+\text{gem. snelheid} &= \frac{\green{\text{afgelegde afstand} }}{\orange{\text{tijd die nodig was}}}\\
+ &= \frac{\green{180~\si{m}} - \green{20~\si{m}}}{\orange{3{,}00~\si{s}} - \orange{1{,}00~\si{s}}}\\
+ &= \frac{\green{160~\si{m}}}{\orange{2{,}00~\si{s}}}\\
+ &= 80{,}0~\si{m/s}\\
  &= 288~\si{km/h}
 \end{split}
 
@@ -151,7 +151,7 @@ die telkens voluit te moeten schrijven. Daarom gaan we zulke verschillen
 afkorten. Hiervoor gebruiken we de Griekse hoofdletter $\Delta$ (de delta):
 
 \begin{split}
-\green{f(x_2)} - \green{f(x_1)} &= \green{\Delta f(x)}\\\\\
+\green{f(x_2)} - \green{f(x_1)} &= \green{\Delta f(x)}\\
  \orange{x_2} - \orange{x_1} &= \orange{\Delta x}
 \end{split}
 
