--- a/src/content/lessen/wiskunde/eentermen/macht/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/macht/index.mdx
@@ -24,7 +24,7 @@ De rekenregel voor het berekenen van de macht van een macht zegt dat we de
 **exponenten met elkaar moeten vermenigvuldigen**:
 
 \begin{split}
-(a^2)^3 &= a^{2\cdot 3}\\\\\
+(a^2)^3 &= a^{2\cdot 3}\\
  &= a^6
 \end{split}
 
@@ -40,7 +40,7 @@ $$\sqrt[3]{a^{12}}$$
 Dan werken we dat als volgt uit:
 
 \begin{split}
-\sqrt[3]{a^{12}} &= a^{12/3}\\\\\
+\sqrt[3]{a^{12}} &= a^{12/3}\\
  &= a^4
 \end{split}
 
@@ -77,8 +77,8 @@ $$(-5x^3y^2)^2$$
 De eerste stap is om de macht van de **coëfficiënt** te berekenen (de $-5$):
 
 \begin{split}
-(\orange{-5}x^3y^2)^2 &= (\orange{-5})^2\cdot(x^3y^2)^2\\\\\
- &=\orange{25}\cdot(x^3y^2)^2\\\\\
+(\orange{-5}x^3y^2)^2 &= (\orange{-5})^2\cdot(x^3y^2)^2\\
+ &=\orange{25}\cdot(x^3y^2)^2\\
 \end{split}
 
 Vervolgens berekenen we de macht van het **lettergedeelte**. Hiervoor gebruiken
@@ -87,17 +87,17 @@ macht van de $x$ berekenen:
 
 \begin{split}
 25\cdot(\orange{x^3}y^2)^2
-&= 25(\orange{x^3})^2\cdot(y^2)^2\\\\\
- &= 25\orange{x^{3\cdot 2}}\cdot(y^2)^2\\\\\
- &= 25\orange{x^{6}}\cdot(y^2)^2\\\\\
+&= 25(\orange{x^3})^2\cdot(y^2)^2\\
+ &= 25\orange{x^{3\cdot 2}}\cdot(y^2)^2\\
+ &= 25\orange{x^{6}}\cdot(y^2)^2\\
 \end{split}
 
 Het berekenen van de macht van de $y$ doen we op dezelfde manier:
 
 \begin{split}
 25x^{6}\cdot(\orange{y^2})^2
-&= 25x^{6}\orange{y^{2\cdot 2}} \\\\\
- &= 25x^{6}\orange{y^{4}} \\\\\
+&= 25x^{6}\orange{y^{2\cdot 2}} \\
+ &= 25x^{6}\orange{y^{4}} \\
 \end{split}
 
 De uitkomst van de macht van de veelterm is dus:
@@ -121,8 +121,8 @@ Dan moeten we eerst de wortel berekenen van de **coëfficiënt** (hier $49$):
 
 \begin{split}
 \sqrt{\orange{49}a^6b^4}
-&= \sqrt{\orange{49}}\cdot \sqrt{a^6b^4}\\\\\
- &= \orange{7}\cdot \sqrt{a^6b^4}\\\\\
+&= \sqrt{\orange{49}}\cdot \sqrt{a^6b^4}\\
+ &= \orange{7}\cdot \sqrt{a^6b^4}\\
 \end{split}
 
 Vervolgens moeten we de wortel van elke factor in het **lettergedeelte**
@@ -134,17 +134,17 @@ met het berekenen van de exponent van $a$:
 
 \begin{split}
 7\cdot \sqrt{\orange{a^6}b^4}
-&=7\cdot \sqrt{\orange{a^6}}\cdot \sqrt{b^4} \\\\\
- &=7\orange{a^{6/2}}\cdot \sqrt{b^4} \\\\\
- &=7\orange{a^3}\cdot \sqrt{b^4} \\\\\
+&=7\cdot \sqrt{\orange{a^6}}\cdot \sqrt{b^4} \\
+ &=7\orange{a^{6/2}}\cdot \sqrt{b^4} \\
+ &=7\orange{a^3}\cdot \sqrt{b^4} \\
 \end{split}
 
 Ten slotte doen we hetzelfde voor $b$:
 
 \begin{split}
 7a^3\cdot \sqrt{\orange{b^4}}
-&= 7a^3\orange{b^{4/2}} \\\\\
- &= 7a^3\orange{b^2} \\\\\
+&= 7a^3\orange{b^{4/2}} \\
+ &= 7a^3\orange{b^2} \\
 \end{split}
 
 De uitkomst van de wortel van de eenterm is dus:
@@ -165,17 +165,17 @@ vermenigvuldigen**. We zullen dit al eens doen voor de $a$ in de opgave:
 
 \begin{split}
 (\orange{a^{(m - 1)}}b^{(n + 2)})^3
-&= (\orange{a^{(m - 1)}})^3\cdot (b^{(n + 2)})^3\\\\\
- &= \orange{a^{(m - 1)\cdot 3}}\cdot (b^{(n + 2)})^3\\\\\
- &= \orange{a^{3m - 3}}\cdot (b^{(n + 2)})^3\\\\\
+&= (\orange{a^{(m - 1)}})^3\cdot (b^{(n + 2)})^3\\
+ &= \orange{a^{(m - 1)\cdot 3}}\cdot (b^{(n + 2)})^3\\
+ &= \orange{a^{3m - 3}}\cdot (b^{(n + 2)})^3\\
 \end{split}
 
 We kunnen nu hetzelfde doen voor de $b$:
 
 \begin{split}
 a^{3m - 3}\cdot (\orange{b^{(n + 2)}})^3
-&= a^{3m - 3}\orange{b^{(n + 2)\cdot 3}}\\\\\
- &= a^{3m - 3}\orange{b^{3n + 6}}\\\\\
+&= a^{3m - 3}\orange{b^{(n + 2)\cdot 3}}\\
+ &= a^{3m - 3}\orange{b^{3n + 6}}\\
 \end{split}
 
 De uitkomst van onze macht is dus:
@@ -188,8 +188,8 @@ een kort voorbeeld van:
 
 \begin{split}
 \sqrt[5]{x^{(20m + 10)}y^{5n}}
-&= x^{(20m + 10)/5}y^{5n/5}\\\\\
- &= x^{4m + 2}y^{n}\\\\\
+&= x^{(20m + 10)/5}y^{5n/5}\\
+ &= x^{4m + 2}y^{n}\\
 \end{split}
 
 Je ziet dat het weer voornamelijk een kwestie is van het correct toepassen van
