--- a/src/content/lessen/wiskunde/eentermen/som/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/som/index.mdx
@@ -73,14 +73,14 @@ Nu moeten we enkel **per soort de coëfficiënten bij elkaar optellen**. Voor de
 eentermen met $xy^3$ als lettergedeelte geeft dit:
 
 \begin{split}
-\orange{6}xy^3 + \orange{2}xy^3 &= (\orange{6} + \orange{2})xy^3\\\\\
+\orange{6}xy^3 + \orange{2}xy^3 &= (\orange{6} + \orange{2})xy^3\\
 &= \orange{8}xy^3
 \end{split}
 
 Voor de eentermen met $x$ als lettergedeelte krijgen we:
 
 \begin{split}
-\blue{5}x \blue{-8}x &= (\blue{5} \blue{-8})x \\\\\
+\blue{5}x \blue{-8}x &= (\blue{5} \blue{-8})x \\
 &= \blue{-3}x
 \end{split}
 
@@ -100,14 +100,14 @@ over de optelling in $\mathbb{Q}$ <Mute text="(geldt ook voor $\mathbb{R}$)" />:
 $$
 \newcommand{\gewoon}{
 \begin{split}
-    (6 + 3)\cdot 2 &= (9) \cdot 2\\\\\
+    (6 + 3)\cdot 2 &= (9) \cdot 2\\
                    &= 18
 \end{split}
 }
 \newcommand{\distributief}{
 \begin{split}
-    (6 + 3)\cdot \orange{2} &= 6\cdot\orange{2} + 3\cdot\orange{2}\\\\\
-                            &=12 + 6\\\\\
+    (6 + 3)\cdot \orange{2} &= 6\cdot\orange{2} + 3\cdot\orange{2}\\
+                            &=12 + 6\\
                             &= 18
 \end{split}
 }
