--- a/src/content/lessen/wiskunde/veeltermen/merkwaardige_producten/index.mdx
+++ b/src/content/lessen/wiskunde/veeltermen/merkwaardige_producten/index.mdx
@@ -45,11 +45,11 @@ $(a + b)^2$:
 &= \blue{a}\cdot \orange{a}
 \quad&+ \blue{a} \cdot \orange{b}
 \quad&+ \blue{b} \cdot \orange{a}
-\quad&+ \blue{b} \cdot \orange{b} \\\\\
+\quad&+ \blue{b} \cdot \orange{b} \\
  &= a^2
 &+ \blue{a}\orange{b}
 &+ \orange{a}\blue{b}
-&+ b^2 \\\\\
+&+ b^2 \\
  &= a^2 &+ 2ab &&+ b^2
 \end{split}
 
@@ -59,11 +59,11 @@ We kunnen hetzelfde voor $(a - b)^2$ doen:
 &= \blue{a}\cdot \orange{a}
 \quad&+ \blue{a} \cdot (-\orange{b})
 \quad&- \blue{b} \cdot \orange{a}
-\quad&- \blue{b} \cdot (-\orange{b}) \\\\\
+\quad&- \blue{b} \cdot (-\orange{b}) \\
  &= a^2
 &- \blue{a}\orange{b}
 &- \orange{a}\blue{b}
-&+ b^2 \\\\\
+&+ b^2 \\
  &= a^2 &- 2ab &&+ b^2
 \end{split}
 
@@ -73,11 +73,11 @@ En voor $(a + b)\cdot(a - b)$:
 &= \blue{a}\cdot \orange{a}
 \quad&+ \blue{a} \cdot (-\orange{b})
 \quad&+ \blue{b} \cdot \orange{a}
-\quad&+ \blue{b} \cdot (-\orange{b}) \\\\\
+\quad&+ \blue{b} \cdot (-\orange{b}) \\
  &= a^2
 &- \blue{a}\orange{b}
 &+ \orange{a}\blue{b}
-&- b^2 \\\\\
+&- b^2 \\
  &= a^2 &&&- b^2
 \end{split}
 
@@ -115,18 +115,18 @@ toepassen: $(a - b)^2 = a^2 -2ab + b^2$ waarbij we $a$ vervangen door $100$ en
 $b$ vervangen door $1$.
 
 \begin{split}
-99^2 &= (100 - 1)^2 \\\\\
- &= 100^2 -2\cdot 100 \cdot 1 + 1^2 \\\\\
- &= 10\ 000 -200 + 1 \\\\\
+99^2 &= (100 - 1)^2 \\
+ &= 100^2 -2\cdot 100 \cdot 1 + 1^2 \\
+ &= 10\ 000 -200 + 1 \\
  &= 9801
 \end{split}
 
 We kunnen ook snel $102^2$ berekenen door het op te splitsen in $100 + 2$:
 
 \begin{split}
-102^2 &= (100 + 2)^2 \\\\\
- &= 100^2 +2\cdot 100 \cdot 2 + 2^2 \\\\\
- &= 10\ 000 +400 + 4 \\\\\
+102^2 &= (100 + 2)^2 \\
+ &= 100^2 +2\cdot 100 \cdot 2 + 2^2 \\
+ &= 10\ 000 +400 + 4 \\
  &= 10\ 404
 \end{split}
 
